Forgot the trailing slash

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://girlswithdeeppockets.com"
+baseurl = "http://girlswithdeeppockets.com/"
 languageCode = "en-gb"
 title = "Girls with Deep Pockets"
 # Enable comments by entering your Disqus shortname
