--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "Girls with Deep Pockets"
 # Enable comments by entering your Disqus shortname
 disqusShortname = "girlswithdeeppockets"
 # Enable Google Analytics by entering your tracking code
-googleAnalytics = ""
+googleAnalytics = "UA-86386589-1"
 # Define the number of posts per page
 paginate = 10
 footnotereturnlinkcontents = "↩"
