--- a/config.toml
+++ b/config.toml
@@ -54,6 +54,8 @@ theme = "hugo-icarus-theme"
     follow_button = "https://twitter.com/gwdeeppockets"
 
 
+email = "your@email.com"
+
 [social]
 # Add your social network accounts to the profile section on the left
 # by entering your username. The links to your account will be
