--- a/config.toml
+++ b/config.toml
@@ -93,5 +93,5 @@ email = "your@email.com"
 [params.widgets]
     recent_articles = true
     categories = true
-    tags = true
+    tags = false
     tag_cloud = true
